test/Fail/AnonymousRecConstrFunction.agda
module AnonymousRecConstrFunction where

foo : Set
foo = _

_ = foo.constructor
